# ai-yt-automation

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  colab_quickstart.ipynb  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: COLAB_QUICKSTART.md  SETUP.md  architecture.md
src/ai_shorts/: __init__.py  __main__.py  cli.py
src/ai_shorts/application/: __init__.py  dto.py  pipeline.py  use_cases.py
src/ai_shorts/core/: __init__.py  config.py  container.py  gpu.py  logging.py  resilience.py  timer.py
src/ai_shorts/domain/: __init__.py  entities.py  exceptions.py  ports.py  value_objects.py
src/ai_shorts/infrastructure/: __init__.py
src/ai_shorts/infrastructure/adapters/: __init__.py  edge_tts.py  flux_image.py  google_drive.py  google_sheets.py  kokoro_tts.py  moviepy_composer.py  ollama.py  sadtalker.py  sdxl.py  telegram.py  whisper.py  youtube.py
src/ai_shorts/presentation/: __init__.py  api.py
tests/: conftest.py
tests/unit/: test_config.py  test_entities.py  test_resilience.py  test_use_cases.py
